# gameboy_ros

./: .gitmodules  CMakeLists.txt  README.md  package.xml
config/: xbox_mapping.yaml
include/gameboy_ros/: joy_monitor.h  node.h
launch/: test.launch
src/: gameboy_node.cpp  joy_monitor.cpp  main.cpp  node.cpp
