<?xml version="1.0"?>
<package format="2">
  <name>gameboy_ros</name>
  <version>0.0.0</version>
  <description>The gameboy_ros package</description>

  <maintainer email="mike@todo.todo">mike</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>
  <depend>roscpp</depend>
  <depend>image_transport</depend>

  <depend>glut</depend>
  <depend>sdl2</depend>
  <depend>libglew-dev</depend>

  <export>
  </export>
  
</package>
